--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "uuid": "^13.0.0",
     "vite-express": "^0.22.0"
